{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 275,
  "lineage": "c5b4c412-5a4c-d06f-3c95-0d68a2886b9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fa82bbecd4c2879",
            "arn": "arn:aws:ec2:us-east-1:568256616985:elastic-ip/eipalloc-07fa82bbecd4c2879",
            "domain": "vpc",
            "id": "eipalloc-07fa82bbecd4c2879",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-197-135-4.compute-1.amazonaws.com",
            "public_ip": "32.197.135.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-eip-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-eip-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd37f9d93a57bc85",
            "arn": "arn:aws:ec2:us-east-1:568256616985:elastic-ip/eipalloc-0cd37f9d93a57bc85",
            "domain": "vpc",
            "id": "eipalloc-0cd37f9d93a57bc85",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-24-188-163.compute-1.amazonaws.com",
            "public_ip": "100.24.188.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-eip-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-eip-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:internet-gateway/igw-0ddcd6de64c293ad9",
            "id": "igw-0ddcd6de64c293ad9",
            "owner_id": "568256616985",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-igw",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-igw",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:568256616985:loadbalancer/app/sample-game-app-dev-alb/fd41b2d87006c6a5",
            "arn_suffix": "app/sample-game-app-dev-alb/fd41b2d87006c6a5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sample-game-app-dev-alb-470576567.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:568256616985:loadbalancer/app/sample-game-app-dev-alb/fd41b2d87006c6a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sample-game-app-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-060bd2fc1dd6c18ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b8b1af65ab27ee3"
              },
              {
                "subnet_id": "subnet-0d911b8c304c6538c"
              }
            ],
            "subnets": [
              "subnet-01b8b1af65ab27ee3",
              "subnet-0d911b8c304c6538c"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "vpc_id": "vpc-04a64e058857c1463",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:568256616985:listener/app/sample-game-app-dev-alb/fd41b2d87006c6a5/934abb63c416daf8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:568256616985:targetgroup/sample-game-app-dev-tg/136933ee436f4b9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:568256616985:listener/app/sample-game-app-dev-alb/fd41b2d87006c6a5/934abb63c416daf8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:568256616985:loadbalancer/app/sample-game-app-dev-alb/fd41b2d87006c6a5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "Sample Game Backend"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:568256616985:targetgroup/sample-game-app-dev-tg/136933ee436f4b9d",
            "arn_suffix": "targetgroup/sample-game-app-dev-tg/136933ee436f4b9d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/application/version",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:568256616985:targetgroup/sample-game-app-dev-tg/136933ee436f4b9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-game-app-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fa82bbecd4c2879",
            "association_id": "eipassoc-030a148337e7c186b",
            "connectivity_type": "public",
            "id": "nat-0d0ede30430b5953e",
            "network_interface_id": "eni-06b6c2d88a64a3fe1",
            "private_ip": "10.0.1.91",
            "public_ip": "32.197.135.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d911b8c304c6538c",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-gateway-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-gateway-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd37f9d93a57bc85",
            "association_id": "eipassoc-005514cacf90959be",
            "connectivity_type": "public",
            "id": "nat-0cf65ecf5084dced1",
            "network_interface_id": "eni-06ec72cb93a498bd4",
            "private_ip": "10.0.2.226",
            "public_ip": "100.24.188.163",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b8b1af65ab27ee3",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-gateway-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-nat-gateway-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:route-table/rtb-0878dbb645a864191",
            "id": "rtb-0878dbb645a864191",
            "owner_id": "568256616985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d0ede30430b5953e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-rt-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-rt-1",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:route-table/rtb-0977c56c644aadc64",
            "id": "rtb-0977c56c644aadc64",
            "owner_id": "568256616985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf65ecf5084dced1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-rt-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-rt-2",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:route-table/rtb-0dc2f3efa7b6e50e8",
            "id": "rtb-0dc2f3efa7b6e50e8",
            "owner_id": "568256616985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddcd6de64c293ad9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-rt",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-rt",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ff08abd7fca9c3b",
            "route_table_id": "rtb-0878dbb645a864191",
            "subnet_id": "subnet-05bdfeb743217ab96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d36dea97a5ac3026",
            "route_table_id": "rtb-0977c56c644aadc64",
            "subnet_id": "subnet-00387b76ce01d2301"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f020a8a140d2fe89",
            "route_table_id": "rtb-0dc2f3efa7b6e50e8",
            "subnet_id": "subnet-0d911b8c304c6538c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3243ede6abb8edb",
            "route_table_id": "rtb-0dc2f3efa7b6e50e8",
            "subnet_id": "subnet-01b8b1af65ab27ee3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:security-group/sg-060bd2fc1dd6c18ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060bd2fc1dd6c18ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-game-app-dev-alb-20260710095927322800000002",
            "name_prefix": "sample-game-app-dev-alb-",
            "owner_id": "568256616985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-alb-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-alb-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:security-group/sg-051aa5cb4606a053b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051aa5cb4606a053b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060bd2fc1dd6c18ad"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sample-game-app-dev-ecs-tasks-20260710095933848300000004",
            "name_prefix": "sample-game-app-dev-ecs-tasks-",
            "owner_id": "568256616985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-ecs-tasks-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-ecs-tasks-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:security-group/sg-05e9401bd7011e15b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e9401bd7011e15b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051aa5cb4606a053b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sample-game-app-dev-rds-20260710095939427800000005",
            "name_prefix": "sample-game-app-dev-rds-",
            "owner_id": "568256616985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-rds-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-rds-sg",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:subnet/subnet-05bdfeb743217ab96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bdfeb743217ab96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568256616985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-subnet-1",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-subnet-1",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:subnet/subnet-00387b76ce01d2301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00387b76ce01d2301",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568256616985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-subnet-2",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-private-subnet-2",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:subnet/subnet-0d911b8c304c6538c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d911b8c304c6538c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568256616985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-subnet-1",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-subnet-1",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:subnet/subnet-01b8b1af65ab27ee3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b8b1af65ab27ee3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568256616985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-subnet-2",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-public-subnet-2",
              "Owner": "learnfi",
              "Project": "sample-game-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-04a64e058857c1463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256616985:vpc/vpc-04a64e058857c1463",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0097c7a99980860a0",
            "default_route_table_id": "rtb-05c2c1987daa99ef7",
            "default_security_group_id": "sg-0158a2e276e5a4473",
            "dhcp_options_id": "dopt-0a2c60f25b3b1eed9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a64e058857c1463",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c2c1987daa99ef7",
            "owner_id": "568256616985",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-vpc",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sample-game-app-dev-vpc",
              "Owner": "learnfi",
              "Project": "sample-game-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}